--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
   <artifactId>velocity-tools-avro</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
+  <properties>
+    <compiler-plugin.version>2.3.2</compiler-plugin.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.avro</groupId>
@@ -15,4 +19,14 @@
       <version>1.9.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${compiler-plugin.version}</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
